common-applications/freesky-icsl-hk-cluster/mindspore-website/api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: website-api-service
  namespace: mindspore-website
spec:
  ports:
  - name: http-port
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: api
  type: ClusterIP
