common-applications/freesky-icsl-hk-cluster/mindspore-website/api/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: website-api-ingress
  namespace: mindspore-website
spec:
  rules:
  - host: mindspore-api.myopeninfra.com
    http:
      paths:
      - backend:
          serviceName: website-api-service
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - mindspore-api.myopeninfra.com
    secretName: website-api-tls
